removed blog section

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 		</div>
 	</section>
 
-	<section id="blog">
+	<!-- <section id="blog">
 		<div class="container">
 			<div class="row">
 				<div class="hero col-sm-6 col-sm-offset-3">
@@ -417,7 +417,6 @@
 											src="img/blog/blog-2.jpg" class="img-responsive" alt="" /></a></div>
 							</div>
 						</div>
-						<!--carousel-->
 					</div>
 				</div>
 				<div class="col-sm-6">
@@ -524,8 +523,7 @@
 				<a href="#" class="btn btn-default btn-large"><i class="fa fa-eye"></i> Show all Blog Posts</a>
 			</p>
 		</div>
-		<!--container-->
-	</section>
+	</section> -->
 
 	<section id="testimonials" class="testimonials">
 		<div class="container">
