--- a/services.html
+++ b/services.html
@@ -70,9 +70,9 @@
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav menuBar">
 					<li><a href="#welcome">About Us</a></li>
-					<li><a href="../services.html">Services</a></li>
+					<li><a href="#offers">Services</a></li>
 					<!-- <li><a href="#blog">Blog</a></li> -->
-					<li><a href="">Testimonials</a></li>
+					<li><a href="services.html">Testimonials</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
@@ -141,7 +141,7 @@
 					<p>About Our Team</p>
 				</div>
 			</div> -->
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-md-6">
 					<div class="introduction-table">
 						<div class="row">
@@ -197,7 +197,7 @@
 
 							</div>
 
-						</div>
+						</div> 
 						<div class="row">
 							<div class="col-sm-3">
 								<h4>Social Profiles</h4>
@@ -205,10 +205,11 @@
 							<div class="col-sm-9">
 								<a href="#"><i class="fa fa-facebook fa-fw"></i></a>
 								<a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
-								<!-- <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
-								<a href="#"><i class="fa fa-instagram fa-fw"></i></a> -->
+								 <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
+								<a href="#"><i class="fa fa-instagram fa-fw"></i></a> 
 							</div>
 						</div>
+				
 					</div>
 				</div>
 
@@ -222,12 +223,12 @@
 					<p>Companies such as Comcast, Old Republic, YDesign Group, and Google have benefitted from Adam’s
 						accumulated knowledge and experience of working in the industry.</p>
 					Kind Regards,
-					<!-- signature or headshot here -->
+						signature or headshot here 
 					<img src="#" class="img-responsive" alt="" />
 				</div>
 			</div>
+		
 		</div>
-		<!--container-->
 	</section>
 	</div>
 	</section>
@@ -304,6 +305,7 @@
 					
 			</div>
 		</div>
+
 	</div>
 			
 	
@@ -385,6 +387,7 @@
 			</div>
 		</div>
 	</section>
+-->
 
 <!--BLOG SECTION-->
 	<!-- <section id="blog">
