--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav menuBar">
-					<li><a href="#welcome">About Us</a></li>
-					<li><a href="../services.html">Services</a></li>
+					<li><a href="aboutUs.html">About Us</a></li>
+					<li><a href="services.html">Services</a></li>
 					<!-- <li><a href="#blog">Blog</a></li> -->
-					<li><a href="">Testimonials</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="testimonials.html">Testimonials</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -110,9 +110,9 @@
 		</div>
 		<div id="slides">
 			<div class="slides-container">
-				<img src="img/giphycats.gif" alt="1" />
-				<img src="img/giphycats.gif" alt="1" />
-				<img src="img/giphycats.gif" alt="1" />
+				<img class='imgOpac' src="img/giphycats.gif" alt="1" />
+				<img class='imgOpac' src="img/giphycats.gif" alt="1" />
+				<img class='imgOpac' src="img/giphycats.gif" alt="1" />
 			</div>
 		</div>
 	</section>
