--- a/services.html
+++ b/services.html
@@ -69,11 +69,11 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav menuBar">
-					<li><a href="#welcome">About Us</a></li>
-					<li><a href="#offers">Services</a></li>
+					<li><a href="aboutUs.html">About Us</a></li>
+					<li><a href="services.html">Services</a></li>
 					<!-- <li><a href="#blog">Blog</a></li> -->
-					<li><a href="services.html">Testimonials</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="testimonials.html">Testimonials</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -119,7 +119,7 @@
 
 	<section id="welcome">
 		<img alt="" class="thumb-middle" src="img/ABCG11.jpg">
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="hero col-sm-12">
 					<h2 class=' animated' data-animation-delay="800" data-animation="zoomIn"> <span
@@ -136,7 +136,7 @@
 					<div class="space"></div>
 				</div>
 			</div>
-		
+		 -->
 	<section id="testimonials" class="testimonials">
 		<div class="container">
 			<div class="row">
