--- a/services.html
+++ b/services.html
@@ -110,9 +110,9 @@
 		</div>
 		<div id="slides">
 			<div class="slides-container">
-				<img src="img/giphycats.gif" alt="1" />
-				<img src="img/giphycats.gif" alt="1" />
-				<img src="img/giphycats.gif" alt="1" />
+				<img src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
+				<img src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
+				<img src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
 			</div>
 		</div>
 	</section>
