fix the navbar link to its page html

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -110,9 +110,9 @@
 		</div>
 		<div id="slides">
 			<div class="slides-container">
-				<img src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
-				<img src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
-				<img src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
+				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
+				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
+				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
 			</div>
 		</div>
 	</section>
@@ -232,7 +232,7 @@
 	</div>
 	</section>
 
-	<div class="container">
+	<div class="container" id='serviceBackgroundColor'>
 		<div class="row">
 			<h2>Caption hover effect </h2>
 			<p>Image caption with a text previewed in the bottom</p>
