--- a/aboutUs.html
+++ b/aboutUs.html
@@ -232,13 +232,14 @@
 	</div>
 	</section>
 
-	<div class="container" id='serviceBackgroundColor'>
-		<div class="row">
-			<h2>Caption hover effect </h2>
+	<div class="container text-center" id='serviceBackgroundColor'>
+		<div class="row animated" data-animation-delay="800" data-animation="zoomIn">
+			<h2 class='' >Services</h2>
+
 			<p>Image caption with a text previewed in the bottom</p>
 			<p>Width size doesn´t matter</p>
 		</div>
-		<div class="row">
+		<div class="row animated" data-animation-delay="800" data-animation="zoomIn">
 			<div class="col-lg-3">
 						<div class="cuadro_intro_hover " style="background-color:#cccccc;">
 							<p style="text-align:center; margin-top:20px;">
