--- a/services.html
+++ b/services.html
@@ -76,10 +76,10 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav menuBar">
-					<li><a href="aboutUs.html">About Us</a></li>
-					<li><a href="services.html">Services</a></li>
-					<!-- <li><a href="#blog">Blog</a></li> -->
-					<li><a href="contact.html">Contact</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="aboutUs.html">About Us</a></li>
+						<!-- <li><a href="#blog">Blog</a></li> -->
+						<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -92,7 +92,7 @@
 				<div class="hero" data-start="top:0px;opacity:1" data-top-bottom="top:500px;opacity:0">
 					<div class="col-sm-8 col-sm-offset-2 animated" data-animation-delay="400" data-animation="zoomIn">
 						<div id="carousel-head" class="carousel slide carousel-fade">
-							<img id="landingLogo" src="img/ABCGLOGO35.png">
+							<!-- <img id="landingLogo" src="img/ABCGLOGO35.png"> -->
 							<br>
 							<br>
 							<div class="carousel-inner">
@@ -116,9 +116,9 @@
 		</div>
 		<div id="slides">
 			<div class="slides-container">
-				<img  class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
-				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
-				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
+				<img  class='imgOpac' src="img/about-us.jpg" alt="1" />
+				<img class='imgOpac' src="img/about-us.jpg" alt="1" />
+				<img class='imgOpac' src="img/about-us.jpg" alt="1" />
 			</div>
 		</div>
 	</section>
