--- a/aboutUs.html
+++ b/aboutUs.html
@@ -76,7 +76,7 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav menuBar">
-					<li><a href="aboutUs.html">About Us</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="services.html">Services</a></li>
 					<!-- <li><a href="#blog">Blog</a></li> -->
 					<li><a href="contact.html">Contact</a></li>
@@ -116,9 +116,9 @@
 		</div>
 		<div id="slides">
 			<div class="slides-container">
-				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
-				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
-				<img class='imgOpac' src="../ABCGpreview/ABC Img/elite-call-centre-19.jpg" alt="1" />
+					<img  class='imgOpac' src="img/about-us.jpg" alt="1" />
+					<img class='imgOpac' src="img/about-us.jpg" alt="1" />
+					<img class='imgOpac' src="img/about-us.jpg" alt="1" />
 			</div>
 		</div>
 	</section>
