--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 								<div class="caption-text">
 									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Metrics Management</h3>
 									<p>Provide real-time information to be successful</p>
-									<a class=" btn btn-default" href="services.html"glyphicon glyphicon-plus"> INFO</span></a>
+									<a class=" btn btn-default" href="services.html"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
 							</div>
 						</div>
@@ -319,86 +319,6 @@
 			
 	
 	</div>
-
-	<!-----------------------What We Offer--------------------------------------->
-	<section id="offers">
-		<div class="container">
-			<div class="row">
-				<div class="hero col-sm-6 col-sm-offset-3">
-					<p>What We offer</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="feature">
-						<div class="icon ">
-							<i class="fa fa-desktop"></i>
-						</div>
-						<div class="headline">
-							<h3>Call Center Outsourcing</h3>
-						</div>
-						<div class="text hidden-sm">
-							<p>ABCG provides this service to help organizations find the best Call Center
-								outsourcing center to meet specified requirements.</p>
-						</div>
-						<div class="background-icon animated" data-animation-delay="0" data-animation="fadeInLeft">
-							<i class="fa fa-desktop"></i>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="feature">
-						<div class="icon ">
-							<i class="fa fa-compass"></i>
-						</div>
-						<div class="headline">
-							<h3>Call Center Training</h3>
-						</div>
-						<div class="text hidden-sm">
-							<p>ABCG provides customer service and sales training with over 60 years of
-								combined experience to better serve the needs of our clients.</p>
-						</div>
-						<div class="background-icon animated" data-animation-delay="200" data-animation="fadeInLeft">
-							<i class="fa fa-compass"></i>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="feature">
-						<div class="icon ">
-							<i class="fa fa-tablet"></i>
-						</div>
-						<div class="headline">
-							<h3>Metrics Management</h3>
-						</div>
-						<div class="text hidden-sm">
-							<p>ABCG solutions will provide your organization with key real-time information it needs to be successful.</p>
-						</div>
-						<div class="background-icon animated" data-animation-delay="200" data-animation="fadeInLeft">
-							<i class="fa fa-tablet"></i>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="feature">
-						<div class="icon ">
-							<i class="fa fa-pencil"></i>
-						</div>
-						<div class="headline">
-							<h3>Call Center Operations</h3>
-						</div>
-						<div class="text hidden-sm">
-							<p>ABCG will do an evaluation of of key aspects to ensure your operation runs as efficient as possible.</p>
-						</div>
-						<div class="background-icon animated" data-animation-delay="200" data-animation="fadeInLeft">
-							<i class="fa fa-pencil"></i>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
 <!--BLOG SECTION-->
 	<!-- <section id="blog">
 		<div class="container">
