updating services.html and linking buttons from index.html

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 								<div class="caption-text">
 									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Call Center Outsourcing</h3>
 									<p>We will find what suits your needs</p>
-									<a class=" btn btn-default" href="services.html"><span class="glyphicon glyphicon-plus"> INFO</span></a>
+									<a class=" btn btn-default" href="services.html#outsourcing"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
 							</div>
 						</div>
@@ -276,7 +276,7 @@
 								<div class="caption-text">
 									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Call Center Training</h3>
 									<p>Develop Customer service and sales training</p>
-									<a class=" btn btn-default" href="services.html"><span class="glyphicon glyphicon-plus"> INFO</span></a>
+									<a class=" btn btn-default" href="services.html#training"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
 							</div>
 						</div>
@@ -292,7 +292,7 @@
 								<div class="caption-text">
 									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Metrics Management</h3>
 									<p>Provide real-time information to be successful</p>
-									<a class=" btn btn-default" href="services.html"><span class="glyphicon glyphicon-plus"> INFO</span></a>
+									<a class=" btn btn-default" href="services.html#management"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
 							</div>
 						</div>
@@ -308,7 +308,7 @@
 								<div class="caption-text">
 									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Call Center Operations</h3>
 									<p>Evaluate key aspects to maximize efficiency</p>
-									<a class=" btn btn-default" href="services.html"><span class="glyphicon glyphicon-plus"> INFO</span></a>
+									<a class=" btn btn-default" href="services.html#operations"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
 							</div>
 						</div>
