animate, navbar background & h2

--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
 				</div>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-				<ul class="nav menuBar">
+				<ul class="nav menuBar animated slideInRight">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="aboutUs.html">About Us</a></li>
 					<!-- <li><a href="#blog">Blog</a></li> -->
@@ -97,16 +97,16 @@
 							<br>
 							<div class="carousel-inner">
 								<div class="item active">
-									<h3>Professional Management</h3>
+									<h2>Professional Management</h2>
 								</div>
 								<div class="item">
-									<h3>Expert Level Training</h3>
+									<h2>Expert Level Training</h2>
 								</div>
 								<div class="item">
-									<h3>Scalable Solutions</h3>
+									<h2>Scalable Solutions</h2>
 								</div>
 								<div class="item">
-									<h3>Call Center Experts</h3>
+									<h2>Call Center Experts</h2>
 								</div>
 							</div>
 						</div>
