--- a/aboutUs.html
+++ b/aboutUs.html
@@ -75,7 +75,7 @@
 				</div>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-				<ul class="nav menuBar">
+				<ul class="nav menuBar animated slideInRight">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="services.html">Services</a></li>
 					<!-- <li><a href="#blog">Blog</a></li> -->
@@ -97,16 +97,16 @@
 							<br>
 							<div class="carousel-inner">
 								<div class="item active">
-									<h3>Professional Management</h3>
+									<h2>Professional Management</h2>
 								</div>
 								<div class="item">
-									<h3>Expert Level Training</h3>
+									<h2>Expert Level Training</h2>
 								</div>
 								<div class="item">
-									<h3>Scalable Solutions</h3>
+									<h2>Scalable Solutions</h2>
 								</div>
 								<div class="item">
-									<h3>Call Center Experts</h3>
+									<h2>Call Center Experts</h2>
 								</div>
 							</div>
 						</div>
@@ -242,7 +242,7 @@
 
 	<div class="container text-center" id='serviceBackgroundColor'>
 		<div class="row animated text_info" data-animation-delay="800" data-animation="zoomIn">
-			<h2 class='' >Services</h2>
+			<h2 class=''>Services</h2>
 
 			<p>What we can do for you Call Center Outsourcing – ABCG provides this service to help organizations find the best Call Center outsourcing center to meet specified requirements. Our consultative approach allows us to identify Call Center providers that are best suited to your goals and objectives. With over 20 years in the Call Center space, it allows us to identify and implement stellar solutions which your company saves time and help you gain efficiencies.
 			Call Center Training – ABCG provides customer service and sales training with over 60 years of combined experience to better serve the needs of our clients. We begin with a commitment to helping</p>
@@ -256,7 +256,7 @@
 							<div class="caption">
 								<div class="blur"></div>
 								<div class="caption-text">
-									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">THIS IS H3</h3>
+									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Call Center Outsourcing</h3>
 									<p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
 									<a class=" btn btn-default" href="./img/services/services1.jpg"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
@@ -272,7 +272,7 @@
 							<div class="caption">
 								<div class="blur"></div>
 								<div class="caption-text">
-									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">THIS IS H3</h3>
+									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Call Center Training </h3>
 									<p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
 									<a class=" btn btn-default" href="./img/services/services1.jpg"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
@@ -288,7 +288,7 @@
 							<div class="caption">
 								<div class="blur"></div>
 								<div class="caption-text">
-									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">THIS IS H3</h3>
+									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Metrics Management</h3>
 									<p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
 									<a class=" btn btn-default" href="./img/services/services3.jpg"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
@@ -304,7 +304,7 @@
 							<div class="caption">
 								<div class="blur"></div>
 								<div class="caption-text">
-									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">THIS IS H3</h3>
+									<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">Call Center Operations</h3>
 									<p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
 									<a class=" btn btn-default" href="./img/services/services3.jpg"><span class="glyphicon glyphicon-plus"> INFO</span></a>
 								</div>
