took away padding from abcg logo above services section

--- a/services.html
+++ b/services.html
@@ -133,10 +133,9 @@
 	</section>
 	</div>
 	</section>
-
-	<!-------------------------------------Services----------------------------------------->
-
-	<section id="services" id='serviceBackgroundColor'>
+	<hr class="invisible">
+		<!-------------------------------------Services----------------------------------------->
+	<div id="services" id='serviceBackgroundColor' style="margin-top: -250px">
 
 		<div class="container text-center" id='serviceBackgroundColor'>
 			<div class="row animated text_info" data-animation-delay="800" data-animation="zoomIn">
@@ -150,6 +149,8 @@
 						solutions and strategies that are focused on meeting your organizational needs.
 				</p>
 			</div>
+			<hr class="invisible">
+			<br>
 			<div class="row" id="outsourcing">
 				<div class="col-sm-6">
 					<img class="img-responsive" src="img/services/services3.jpg" alt="call-center">
@@ -265,7 +266,7 @@
 						</p>
 					</div>
 		</div>
-	</section>
+	</div>
 
 	<section id="testimonials" class="testimonials">
 		<div class="container">
