adding bullet points to services page

--- a/services.html
+++ b/services.html
@@ -153,7 +153,7 @@
 			<br>
 			<div class="row" id="outsourcing">
 				<div class="col-sm-6">
-					<img class="img-responsive" src="img/services/services3.jpg" alt="call-center">
+					<img class="img-responsive" src="img/services/services9.jpg" alt="call-center">
 				</div>
 				<div class="col-sm-6">
 					<h3 style="color:black">Call Center Outsourcing</h3>
@@ -166,6 +166,16 @@
 						space, it allows us to identify and implement stellar solutions which your company saves time
 						and help
 						you gain efficiencies.</p>
+						<ul class="list-unstyled" style="text-align: left">
+							<li><i class="fa fa-phone"></i> Volume and Staffing Levels</li>
+							<li><i class="fa fa-phone"></i> Use of Systems and Data</li>
+							<li><i class="fa fa-phone"></i> Retention, Staff Development and Career Path</li>
+							<li><i class="fa fa-phone"></i>  Escalation and Support Processes</li>
+							<li><i class="fa fa-phone"></i>  Process Efficiencies and Inefficiencies</li>
+							<li><i class="fa fa-phone"></i>  Communication and Information Sharing</li>
+							<li><i class="fa fa-phone"></i>  Inventory of Contact Center Systems and Technologies</li>
+
+						</ul>
 				</div>
 			</div>
 			<hr class="invisible">
@@ -173,7 +183,7 @@
 				<div class="col-sm-6">
 					<h3 style="color:black">Call Center Training</h3>
 
-					<p style="text-align: right"> ABCG provides customer service and sales training with over 60 years
+					<p style="text-align: center"> ABCG provides customer service and sales training with over 60 years
 						of
 						combined experience to better serve the needs of our clients. We begin with a commitment to
 						helping
@@ -181,6 +191,14 @@
 						on
 						improving organizations by creating and delivering competency and skill development programs,
 						training, and processes. Let us be the solution to the problem you are currently facing.</p>
+						<ul class="list-unstyled" style="text-align: left">
+							<li><i class="fa fa-phone"></i>  Major Task Assignment</li>
+							<li><i class="fa fa-phone"></i>  Use of Mobile Applications</li>
+							<li><i class="fa fa-phone"></i>  Systems Integration</li>
+							<li><i class="fa fa-phone"></i>  Forecasting and Scheduling</li>
+							<li><i class="fa fa-phone"></i>  Contact Channels and Handling</li>
+							<li><i class="fa fa-phone"></i>  Functional Roles and Responsibilities</li>
+						</ul>
 
 				</div>
 				<div class="col-sm-6">
@@ -192,7 +210,7 @@
 			<hr class="invisible">
 			<div class="row" id="management">
 				<div class="col-sm-6">
-					<img class="img-responsive" src="img/services/services4.jpg" alt="call-center">
+					<img class="img-responsive" src="img/services/services3.jpg" alt="call-center">
 				</div>
 				<div class="col-sm-6">
 					<h3 style="color:black">Metrics Management</h3>
