--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 							</div>
 						</div>
 					</div>
-					<span style="border-radius: 20px;" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-download-alt"></i> Schedule A Free Consultation</span>
+					<a href="contact.html#contact"><span style="border-radius: 20px; opacity: 1;" class="btn btn-danger btn-lg"><i class="glyphicon glyphicon-pencil"></i> Schedule A Free Consultation</span></a>
+					
 				</div>
 			</div>
 		</div>
