--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							</div>
 						</div>
 					</div>
-					<a href="contact.html#contact"><span style="border-radius: 20px; opacity: 1;" class="btn btn-danger btn-lg"><i class="glyphicon glyphicon-pencil"></i> Schedule A Free Consultation</span></a>
+					<a href="contact.html#contact"><span id="consultation-btn" style="border-radius: 20px; opacity: 1;" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-pencil"></i> Schedule A Free Consultation</span></a>
 					
 				</div>
 			</div>
