--- a/index.html
+++ b/index.html
@@ -536,14 +536,14 @@
 			<div class="row section-padding">
 				<div class="hero">
 					<h2 class=' animated' data-animation-delay="800" data-animation="zoomIn">Get in touch</h2>
-					<p>(Insert Text / Slogan / Quote)</p>
+					<p>Service with Answers</p>
 				</div>
 				<div class="col-sm-6 col-sm-offset-3 animated" data-animation-delay="300" data-animation="fadeInLeft">
 					<h2>AB Consultant Group</h2>
 					
-						<abbr title="Phone">P:</abbr> (123) 456-7890
+						<abbr title="Phone">P:</abbr> (510) 401-1024
 						<br>
-						<a href="mailto:#">(Insert Email Here)</a>
+						<a href="mailto:info@abconsultantgroup.com">(Insert Email Here)</a>
 					</address>
 					<div class="background-icon left animated" data-animation-delay="400" data-animation="fadeInRight">
 						<i class="fa fa-envelope-o"></i>
