--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 					
 						<abbr title="Phone">P:</abbr> (510) 401-1024
 						<br>
-						<a href="mailto:info@abconsultantgroup.com">(Insert Email Here)</a>
+						<a href="mailto:info@abconsultantgroup.com">info@abconsultantgroup.com</a>
 					</address>
 					<div class="background-icon left animated" data-animation-delay="400" data-animation="fadeInRight">
 						<i class="fa fa-envelope-o"></i>
