--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 		<div class="container text-center">
 			<div class="row section-padding">
 				<div class="hero">
-					<h2 class=' animated' data-animation-delay="800" data-animation="zoomIn">Get in touch</h2>
+					<h2 class=' animated' data-animation-delay="800" data-animation="zoomIn" style="margin-bottom: 5px">Get in touch</h2>
 					<p>Service with Answers</p>
 				</div>
 				<div class="col-sm-6 col-sm-offset-3 animated" data-animation-delay="300" data-animation="fadeInLeft">
