reorg images. Updated index.html landing and services

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="hero" data-start="top:0px;opacity:1" data-top-bottom="top:500px;opacity:0">
 					<div class="col-sm-8 col-sm-offset-2 animated" data-animation-delay="400" data-animation="zoomIn">
 						<div id="carousel-head" class="carousel slide carousel-fade">
-							<img id="landingLogo" src="img/ABCGLOGO35.png">
+							<!-- <img id="landingLogo" src="img/ABCGLOGO35.png"> -->
 							<br>
 							<br>
 							<div class="carousel-inner">
@@ -222,16 +222,10 @@
 				</div>
 
 				<div class="col-md-6">
-					<p>With over 20 years of experience, Adam Brandon has worked with some of the top leading
-						international companies that have utilized his skills and talents surrounding customer service,
-						sales, collections, quality assurance, human resource functions, and continuous process
-						improvement. Throughout Adam’s career, his presence has become integral to lead and develop
-						world class professionals through training and understanding of complicated policies and
-						procedures.</p>
-					<p>Companies such as Comcast, Old Republic, YDesign Group, and Google have benefitted from Adam’s
-						accumulated knowledge and experience of working in the industry.</p>
+					<p>Insert Video Here</p>
+					
 					<!-- signature or headshot here -->
-					<img src="#" class="img-responsive" alt="" />
+					<!-- <img src="#" class="img-responsive" alt="" /> -->
 				</div>
 			</div>
 		</div>
@@ -254,7 +248,7 @@
 			<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services1.jpg" alt="">
+								<img src="./img/services/services10.jpg" alt="">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
@@ -270,7 +264,7 @@
 				<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services7.jpg" alt="">
+								<img src="./img/services/services3.jpg" alt="">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
@@ -286,7 +280,7 @@
 				<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services6.jpg" alt="">
+								<img src="./img/services/services2.jpg" alt="">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
@@ -302,7 +296,7 @@
 				<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services5.jpg" alt="">
+								<img src="./img/services/services6.jpg" alt="">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
