changing headshot to jpeg

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -149,60 +149,14 @@
 			</div> -->
 			<div class="row">
 				<div class="col-md-6">
+						<img style="height: 100%" src="/img/headshot.JPG">
+
 					<div class="introduction-table">
 						<div class="row">
 						</div>
 						<div class="row">
-							<div class="col-sm-3">
-								<h4>What we can do for you...</h4>
-							</div>
-							<div class="col-sm-8">
-								<div class="skillbar clearfix " data-percent="100%">
-									<div class="skillbar-title" style="background:#2F3238;"><span>Organization</span>
-									</div>
-									<div class="skillbar-bar" style="background:#2F3238;"></div>
-									<div class="skill-bar-percent">Optimized</div>
+							<div class="col-sm-6">
 								</div>
-
-								<div class="skillbar clearfix " data-percent="100%">
-									<div class="skillbar-title" style="background:#2F3238;"><span>Processes</span></div>
-									<div class="skillbar-bar" style="background:#2F3238;"></div>
-									<div class="skill-bar-percent">Optimized</div>
-								</div>
-
-								<div class="skillbar clearfix " data-percent="100%">
-									<div class="skillbar-title" style="background:#2F3238;"><span>Technology</span>
-									</div>
-									<div class="skillbar-bar" style="background:#2F3238;"></div>
-									<div class="skill-bar-percent">Optimized</div>
-								</div>
-
-								<div class="skillbar clearfix " data-percent="100%">
-									<div class="skillbar-title" style="background:#2F3238;"><span>Management</span>
-									</div>
-									<div class="skillbar-bar" style="background:#2F3238;"></div>
-									<div class="skill-bar-percent">Optimized</div>
-								</div>
-
-								<div class="skillbar clearfix " data-percent="100%">
-									<div class="skillbar-title" style="background:#2F3238;"><span>Scalability</span>
-									</div>
-									<div class="skillbar-bar" style="background:#2F3238;"></div>
-									<div class="skill-bar-percent">Optimized</div>
-								</div>
-
-								<div class="skillbar clearfix " data-percent="100%">
-									<div class="skillbar-title" style="background:#2F3238;"><span>Performance</span>
-									</div>
-									<div class="skillbar-bar" style="background:#2F3238;"></div>
-									<div class="skill-bar-percent">Optimized</div>
-								</div>
-
-
-
-
-							</div>
-
 						</div>
 						<div class="row">
 							<div class="col-sm-3">
