adding back in logo on landing page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="hero" data-start="top:0px;opacity:1" data-top-bottom="top:500px;opacity:0">
 					<div class="col-sm-8 col-sm-offset-2 animated" data-animation-delay="400" data-animation="zoomIn">
 						<div id="carousel-head" class="carousel slide carousel-fade">
-							<!-- <img id="landingLogo" src="img/ABCGLOGO35.png"> -->
+							<img id="landingLogo" src="img/ABCGLOGO35.png">
 							<br>
 							<br>
 							<div class="carousel-inner">
