changed margin on adam headshot and paragraph

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -148,46 +148,44 @@
 				</div>
 			</div> -->
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-12">
 					<div class="introduction-table">
-						<div class="row">
-						</div>
-						<div class="row">
-							<div class="col-sm-6">
-								</div>
-							<div class="col-sm-8">
-							<img style="height: 100%" src="/img/headshot.jpeg">
 
-							</div>
-
-						</div>
 						<div class="row">
-							<div class="col-sm-3">
+							
+							<div class="col-sm-4">
+								<img style="height: 100%; width:100%" src="./img/headshot.jpeg">
+							<div class='row'>
+								<div class='col-sm-4'>
 								<h4>Social Profiles</h4>
-							</div>
-							<div class="col-sm-9">
-								<a href="#"><i class="fa fa-facebook fa-fw"></i></a>
-								<a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
+								</div>
+								<div class='col-sm-6 aboutIcon'>
+									<a href="#"><i class="fa fa-facebook fa-fw"></i></a>
+									<a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
+								</div>
 								<!-- <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
 								<a href="#"><i class="fa fa-instagram fa-fw"></i></a> -->
+							</div>
+							</div>
+							<div class="col-md-6 aboutInfo">
+								<p>With over 20 years of experience, Adam Brandon has worked with some of the top leading
+								international companies that have utilized his skills and talents surrounding customer service,
+								sales, collections, quality assurance, human resource functions, and continuous process
+								improvement. Throughout Adam’s career, his presence has become integral to lead and develop
+								world class professionals through training and understanding of complicated policies and
+								procedures.</p>
+								<p>Companies such as Comcast, Old Republic, YDesign Group, and Google have benefitted from Adam’s
+								accumulated knowledge and experience of working in the industry.</p>
+								Kind Regards,
+								<!-- signature or headshot here -->
+								<img src="#" class="img-responsive" alt="" />
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-6">
-					<p>With over 20 years of experience, Adam Brandon has worked with some of the top leading
-						international companies that have utilized his skills and talents surrounding customer service,
-						sales, collections, quality assurance, human resource functions, and continuous process
-						improvement. Throughout Adam’s career, his presence has become integral to lead and develop
-						world class professionals through training and understanding of complicated policies and
-						procedures.</p>
-					<p>Companies such as Comcast, Old Republic, YDesign Group, and Google have benefitted from Adam’s
-						accumulated knowledge and experience of working in the industry.</p>
-					Kind Regards,
-					<!-- signature or headshot here -->
-					<img src="#" class="img-responsive" alt="" />
-				</div>
+				
+				<div>
 			</div>
 		</div>
 		<!--container-->
