updating services description per AB

--- a/index.html
+++ b/index.html
@@ -240,9 +240,7 @@
 		<div class="row text_info animated" data-animation-delay="800" data-animation="zoomIn">
 			<h2 class='' >Services</h2>
 
-			<p>What we can do for you Call Center Outsourcing – ABCG provides this service to help organizations find the best Call Center outsourcing center to meet specified requirements. Our consultative approach allows us to identify Call Center providers that are best suited to your goals and objectives. With over 20 years in the Call Center space, it allows us to identify and implement stellar solutions which your company saves time and help you gain efficiencies.
-			Call Center Training – ABCG provides customer service and sales training with over 60 years of combined experience to better serve the needs of our clients. We begin with a commitment to helping</p>
-
+			<p>What we can do for your Call Center Outsourcing – ABCG provides this service to help organizations find the best Call Center outsourcing center to meet specified requirements. Our consultative approach allows us to identify Call Center providers that are best suited to your goals and objectives. With over 60 years in the Call Center space, it allows us to identify and implement stellar solutions which your company saves time and you gain efficiencies. Call Center Training – ABCG also provides customer service and sales training allowing our years of combined experience to better serve the needs of our clients. We begin with a commitment to helping.</p>
 		</div>
 		<div class="row animated" data-animation-delay="800" data-animation="zoomIn">
 			<div class="col-lg-3">
