changing services images per Adam

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 			<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services10.jpg" alt="">
+								<img style="margin-top:-25%; margin-left: -40%" src="./img/services/call-center-services3.png" alt="Call Center Outsourcing">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
@@ -262,7 +262,7 @@
 				<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services3.jpg" alt="">
+								<img src="./img/services/services3.jpg" alt="Call Center Training">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
@@ -278,7 +278,7 @@
 				<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services2.jpg" alt="">
+								<img src="./img/services/call-center-services2.png" alt="Metrics Management">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
@@ -294,7 +294,7 @@
 				<div class="col-lg-3">
 						<div class="cuadro_intro_hover">
 							<p style="text-align:center; margin-top:0px;">
-								<img src="./img/services/services6.jpg" alt="">
+								<img style="margin-top:-25%; margin-left: -40%" src="./img/services/call-center-services.png" alt="Call Center Operations">
 							</p>
 							<div class="caption">
 								<div class="blur"></div>
