--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-3">
-								<h4>What we can do for you...</h4>
+								<!-- <h4>What we can do for you...</h4> -->
 							</div>
 							<div class="col-sm-8">
-								<div class="skillbar clearfix " data-percent="100%">
+								<!-- <div class="skillbar clearfix " data-percent="100%">
 									<div class="skillbar-title" style="background:#2F3238;"><span>Organization</span>
 									</div>
 									<div class="skillbar-bar" style="background:#2F3238;"></div>
@@ -197,7 +197,7 @@
 									</div>
 									<div class="skillbar-bar" style="background:#2F3238;"></div>
 									<div class="skill-bar-percent">Optimized</div>
-								</div>
+								</div> -->
 
 
 
