updating images on services page per AB

--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
 		<div id="slides">
 			<div class="slides-container">
 				<img class='imgOpac' src="img/services/background.jpg" alt="1" />
-				<img class='imgOpac' src="img/services/background2.jpg" alt="1" />
+				<img class='imgOpac' src="img/services/background.jpg" alt="1" />
 				<!-- <img class='imgOpac' src="img/about-us.jpg" alt="1" /> -->
 			</div>
 		</div>
@@ -135,7 +135,7 @@
 	</section>
 	<hr class="invisible">
 		<!-------------------------------------Services----------------------------------------->
-	<div id="services" id='serviceBackgroundColor' style="margin-top: -250px">
+	<div id="services" id='serviceBackgroundColor' style="margin-top: -150px">
 
 		<div class="container text-center" id='serviceBackgroundColor'>
 			<div class="row animated text_info" data-animation-delay="800" data-animation="zoomIn">
@@ -202,7 +202,7 @@
 
 				</div>
 				<div class="col-sm-6">
-					<img class="img-responsive" src="img/services/services4.jpg" alt="call-center-training">
+					<img class="img-responsive" src="img/services/services2.jpg" alt="call-center-training">
 
 				</div>
 
@@ -210,7 +210,7 @@
 			<hr class="invisible">
 			<div class="row" id="management">
 				<div class="col-sm-6">
-					<img class="img-responsive" src="img/services/services2.jpg" alt="call-center">
+					<img class="img-responsive" src="img/services/background2.jpg" alt="call-center">
 				</div>
 				<div class="col-sm-6">
 					<h3 style="color:black">Metrics Management</h3>
