making langing logo and text smaller for mobile

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>AB | Consultant Group</title>
-	<meta name="description" content="Description of your Site">
+	<meta name="description" content="With years of extensive industry expertise with
+	professional knowledge within a wide range of industries. The result is a full suite of services
+	for businesses ready to excel and expand their business.">
 	<meta name="author" content="AB - Media &amp; Consulting">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
