--- a/services.html
+++ b/services.html
@@ -284,9 +284,8 @@
 							<span class="tagIcon">Call Center</span><span class="tagIcon">Training</span><span
 								class="tagIcon">Operations</span><span class="tagIcon">Management</span><span class="tagIcon">Metrics</span><span class="tagIcon">Outsourcing</span><span class="tagIcon">Consultant</span>
 						</p>
-					</div>
-					<br>
-					<br>
+				</div>
+				<hr class="invisible">	
 		</div>
 	</div>
 	<!--footer-->
