--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							</div>
 						</div>
 					</div>
-					<a href="contact.html#contact"><span id="consultation-btn" style="border-radius: 35px; opacity: 1;" class="btn btn-default btn-lg"></i> Schedule A Free Consultation</span></a>
+					<a href="contact.html#contact"><span id="consultation-btn" style="border-radius: 35px; opacity: 1;" class="btn btn-default btn-md"></i> Schedule A Free Consultation</span></a>
 					
 				</div>
 			</div>
