editing some text per AB

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -155,8 +155,7 @@
 								improvement. Throughout Adam’s career, his presence has become integral to lead and develop
 								world class professionals through training and understanding of complicated policies and
 								procedures.</p>
-								<p>Companies such as Comcast, AirBnb, Old Republic, YDesign Group, and Google have benefitted from Adam’s
-								accumulated knowledge and experience of working in the industry.</p>
+								<p>Companies such as Google, Uber, Airbnb, Old Republic, Comcast, and Y-Design Group have benefitted from Adam’s accumulated knowledge and experience of working in the industry.</p>
 							</div>
 						</div>
 					</div>
@@ -203,29 +202,6 @@
 			SLAMR.skillbar("animated");
 			SLAMR.slideDownHead(true);
 			SLAMR.scrollAnim("yes");
-			SLAMR.owlCarousel({
-				'#owl-carousel-blog': {
-					singleItem: true,
-					lazyLoad: true,
-					autoPlay: true
-				},
-				'#owl-carousel-clients': {
-					navigation: true,
-					navigationText: [
-						"<i class='fa fa-angle-left arrow-round'></i>",
-						"<i class='fa fa-angle-right arrow-round'></i>"
-					]
-				},
-				'#owl-carousel-testimonial': {
-					singleItem: true,
-					transitionStyle: "goDown",
-					navigation: true,
-					navigationText: [
-						"<i class='fa fa-angle-left arrow-round'></i>",
-						"<i class='fa fa-angle-right arrow-round'></i>"
-					]
-				},
-			});
 			SLAMR.bootstrapCarousel({
 				'#carousel-head': {
 					interval: 5000,
