removing promo video section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							</div>
 						</div>
 					</div>
-					<a href="contact.html#contact"><span id="consultation-btn" style="border-radius: 35px; opacity: 1;" class="btn btn-default btn-md"></i> Schedule A Free Consultation</span></a>
+					<a href="#contact"><span id="consultation-btn" style="border-radius: 35px; opacity: 1;" class="btn btn-default btn-md"></i> Schedule A Free Consultation</span></a>
 					
 				</div>
 			</div>
@@ -150,16 +150,18 @@
 					<p>About Our Team</p>
 				</div>
 			</div> -->
-			<div class="row">
+
+			<!-- commented out this section until we get Promo video -->
+			<!-- <div class="row">
 				<div class="col-md-6">
 					<div class="introduction-table">
 						<div class="row">
 						</div>
 						<div class="row">
 							<div class="col-sm-3">
-								<!-- <h4>What we can do for you...</h4> -->
-							</div>
-							<div class="col-sm-8">
+								 <h4>What we can do for you...</h4> -->
+							<!-- </div>
+							<div class="col-sm-8"> -->
 								<!-- <div class="skillbar clearfix " data-percent="100%">
 									<div class="skillbar-title" style="background:#2F3238;"><span>Organization</span>
 									</div>
@@ -204,36 +206,31 @@
 
 
 
-							</div>
+							<!-- </div>
 
 						</div>
 
-						<!------------------------------Social Profiles-------------------->
-						<div class="row">
+						<----------------------------Social Profiles-------------------->
+						<!-- <div class="row">
 							<div class="col-sm-3">
 								<h4>Social Profiles</h4>
 							</div>
 							<div class="col-sm-9">
 								<a href="#"><i class="fa fa-facebook fa-fw"></i></a>
 								<a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
-								<!-- <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
+								<!<a href="#"><i class="fa fa-twitter fa-fw"></i></a>
 								<a href="#"><i class="fa fa-instagram fa-fw"></i></a> -->
-							</div>
-						</div>
-					</div>
-				</div>
+							<!-- </div> -->
+						<!-- </div> -->
+					<!-- </div> -->
+				<!-- </div> -->
 
-				<div class="col-md-6">
-					<p>Insert Video Here</p>
-					
-					<!-- signature or headshot here -->
-					<!-- <img src="#" class="img-responsive" alt="" /> -->
-				</div>
-			</div>
+				<!-- <div class="col-md-6"> -->
+					<!-- <p>Insert Video Here</p> -->
+				<!-- </div> -->
+			<!-- </div> -->
 		</div>
 		<!--container-->
-	</section>
-	</div>
 	</section>
 
 	<!-------------------------------------Services----------------------------------------->
