correcting text in testimonials

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 						data-animation="fadeInUp"><img src="img/Testimonials/headshot2.jpg"
 							class="img-responsive img-circle" alt="" />
 						<p>
-							Adam has consistently exceeded my expectations. Adam and his team pour their hearts into every project and genuinely care about the success of their clients. I have known and worked with Adam on several projects over the last 15 years. I know I can always count on him and his team for sound business advice. I look forward to working with him and his team on future projects. 
+							AB Consultant Group consistently exceeds my expectations. Adam and his team pour their hearts into every project and genuinely care about the success of their clients. I have known and worked with Adam on several projects over the last 15 years. I know I can always count on him and his team for sound business advice. I look forward to working with him and his team on future projects. 
 						</p>
 						
 					</div>
@@ -469,7 +469,7 @@
 						data-animation="fadeInUp"><img src="img/Testimonials/headshot4.jpg"
 							class="img-responsive img-circle" alt="" />
 						<p>
-							Adam and his team brought energy and great ideas to improve our Contact Center operations. Their ability to listen enabled them to build strong solutions that positively affected our company and our revenue. Adam ensured that any issues were resolved promptly. Highly recommend him and his team!
+							AB Consultant Group brought energy and great ideas to improve our Contact Center operations. Their ability to listen enabled them to build strong solutions that positively affected our company and our revenue. Adam ensured that any issues were resolved promptly. Highly recommend him and his team!
 						</p>
 						
 					</div>
