--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 	<section id="welcome">
 		<img alt="" class="thumb-middle" src="img/ABCG11.jpg">
-		<div class="container">
+		<div class="container" style="margin-top: -20px">
 			<div class="row">
 				<div class="hero col-sm-12">
 					<h2 class=' animated' data-animation-delay="800" data-animation="zoomIn"> <span
