updating mobile view

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<img id="landingLogo" src="img/ABCGLOGO35.png">
 							<br>
 							<br>
-							<div class="carousel-inner">
+							<div class="carousel-inner" id="landingText">
 								<div class="item active">
 									<h2>Professional Management</h2>
 								</div>
