--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 	</section>
 
 	<section id="welcome">
-		<img alt="" class="thumb-middle" src="img/ABCG11.jpg">
-		<div class="container" style="margin-top: -20px">
+		<img alt="" class="thumb-middle" src="ABC Img/ABCG_LETTERS.jpg">
+		<div class="container">
 			<div class="row">
 				<div class="hero col-sm-12">
 					<h2 class=' animated' data-animation-delay="800" data-animation="zoomIn"> <span
