--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:100,200,300,400,700'
 		rel='stylesheet' type='text/css'>
 
+	<!--company font nav-bar  -->
+	<link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
+
 	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 	<script src="https://maps.google.com/maps/api/js?sensor=false"></script>
