--- a/aboutUs.html
+++ b/aboutUs.html
@@ -87,28 +87,8 @@
 		</div>
 	</nav>
 
-	<!--main body-->
-	<section id="head">
-		<div class="container">
-			<div class="row">
-				<div class="hero" data-start="top:0px;opacity:1" data-top-bottom="top:500px;opacity:0">
-					<div class="col-sm-8 col-sm-offset-2 animated" data-animation-delay="400" data-animation="zoomIn">
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="slides">
-			<div class="slides-container">
-					<img  class='imgOpac' src="img/about-us.jpg" alt="1" />
-					<img class='imgOpac' src="img/about-us.jpg" alt="1" />
-					<img class='imgOpac' src="img/about-us.jpg" alt="1" />
-			</div>
-		</div>
-	</section>
-
 	<section id="welcome">
-		<img alt="" class="thumb-middle" src="img/ABCG11.jpg">
-		<div class="container">
+		<div class="container" style="margin-top: 100px">
 			<!-- <div class="row"> -->
 				<!-- <div class="hero col-sm-12"> -->
 					<!-- <h2 class=' animated' data-animation-delay="800" data-animation="zoomIn"> <span
@@ -160,13 +140,7 @@
 						</div>
 					</div>
 				</div>
-
-				
-				<div>
-			</div>
 		</div>
-		<!--container-->
-	</section>
 	</div>
 	</section>
 
