removing round logo, updated font size on all pages

--- a/services.html
+++ b/services.html
@@ -93,8 +93,10 @@
 	<div id="services" id='serviceBackgroundColor' style="margin-top: 50px">
 
 		<div class="container text-center" id='serviceBackgroundColor'>
+			<br>
 			<div class="row animated text_info" data-animation-delay="800" data-animation="zoomIn">
-				<h2 class=''>Services</h2>
+				<h2>Services</h2> 
+				<div class="space"></div>
 
 				<p>We live your world everyday adding value to our Call Center Consulting projects by being active industry
 						practitioners, staying up-to-date on the latest trends, challenges, technologies, regulations and
